feat#5: added hide tabs in nagivation for mobile

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,5 +3,6 @@
   "navigation.smartWatches": "Smart Watches",
   "navigation.tablets": "Tablets",
   "navigation.smartPhones": "Smartphones",
-  "aboutUs": "About Us"
+  "aboutUs": "About Us",
+  "common.logo": "Electronic Shops"
 }
