feat-6: realize footer and sticky navigation

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,6 +3,7 @@
   "navigation.smartWatches": "Smart Watches",
   "navigation.tablets": "Tablets",
   "navigation.smartPhones": "Smartphones",
+  "navigation.home": "Home",
   "aboutUs": "About Us",
   "common.logo": "Electronic Shops"
 }
